--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -843,6 +843,10 @@ select {
     margin-bottom: 1rem !important;
 }
 
+.mb-6 {
+    margin-bottom: 1.5rem !important;
+}
+
 .mr-5 {
     margin-right: 1.25rem !important;
 }
